# AppointmentProblem

./: ABOUT.md  AppointmentProblem.pro  Axis.cpp  Axis.h  AxisTip.cpp  AxisTip.h  CMakeLists.txt  Cube.cpp  Cube.h  Decision.cpp  Decision.h  GeometricProbabilityModel.cpp  GeometricProbabilityModel.h  Graph2d.cpp  Graph2d.h  Graph3d.cpp  Graph3d.h  Helper.html  IGraph.h  IRenderable.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  README.md  Scene.cpp  Scene.h  SegmentPoint.cpp  SegmentPoint.h  helper.cpp  helper.h  helper.pro  helper.ui  library.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp
build-AppointmentProblem-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.AppointmentProblem.Debug  object_script.AppointmentProblem.Release  ui_mainwindow.h
build-AppointmentProblem-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-AppointmentProblem-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Axis.cpp.0B7F98F55AEC1533.idx  Axis.cpp.1B7802A2DC74E984.idx  Axis.cpp.49F06C9F428AFCD0.idx  Axis.cpp.A8DAF768F8861A8F.idx  Axis.h.2615917F6B95436B.idx  Axis.h.3AE1272D6F2C0E46.idx  Axis.h.60FDC7E7A6ACEDBD.idx  Axis.h.7B9D04C2BEC4B977.idx  AxisTip.cpp.256BD4720DA4611C.idx  AxisTip.cpp.905D7C553AFF9522.idx  AxisTip.cpp.AB0470090234BF69.idx  AxisTip.cpp.E7BA10DD0A808BCC.idx  AxisTip.h.21EA11F7F3FA47B7.idx  AxisTip.h.2468E08EC06C484F.idx  AxisTip.h.4D6C9837993E0C54.idx  AxisTip.h.D6F1DBE89F556791.idx  Cube.cpp.0620519C46854D4A.idx  Cube.cpp.8D7B660FA1D20DAA.idx  Cube.cpp.AE73285099137340.idx  Cube.cpp.D2873BC1A6A2F6E3.idx  Cube.h.282701FCE793F01C.idx  Cube.h.2C7457EDE247DBEF.idx  Cube.h.6432B31A6E26FDDF.idx  Cube.h.DFF7E448B02BBDB0.idx  Decision.cpp.2247FEB49C73B16E.idx  Decision.cpp.2668FC28D0D045E5.idx  Decision.cpp.8B432CD8926F5118.idx  Decision.cpp.B62C6D614F1FDA00.idx  Decision.h.2F58625D38D619F7.idx  Decision.h.3E03B76449A765DE.idx  Decision.h.757B1D117751C9BA.idx  Decision.h.8294F8B3221C1CF2.idx  GeometricProbabilityModel.cpp.266251C6399B77EB.idx  GeometricProbabilityModel.cpp.626182DB33FD15BA.idx  GeometricProbabilityModel.cpp.65FA0E8794A79D0D.idx  GeometricProbabilityModel.cpp.E36FCAA8A08F3218.idx  GeometricProbabilityModel.h.34BDA8307CAEFBCE.idx  GeometricProbabilityModel.h.928AD7AB76CCF515.idx  GeometricProbabilityModel.h.9CAC3E873A26DAF6.idx  GeometricProbabilityModel.h.C459273BD6BB4CE7.idx  (+962 more)
build-AppointmentProblem-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-helper-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Helper.html  Makefile  Makefile.Debug  Makefile.Release  ui_helper.h
build-helper-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-helper-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QDialog.17879242B4449545.idx  QFileDialog.C7FD06F658AE0E0D.idx  QJsonDocument.91EB175902101D9E.idx  QJsonObject.08C2B06BB6B8C85E.idx  QJsonParseError.091B5819198B3D47.idx  QTextBrowser.0688AB5FD52103FF.idx  helper.cpp.A6541A6BA5D631BC.idx  helper.h.7191900372CBDA72.idx  main.cpp.4CAC878CC1E8C4D9.idx  qcborcommon.h.7C1678797E360824.idx  qcborvalue.h.2E55F84CECEFB99C.idx  qcontiguouscache.h.3D33AC0E455C4E12.idx  qcoreapplication.h.63C6CA95E6BB7A1B.idx  qdebug.h.E7F91AA0979DBAE9.idx  qdialog.h.959D36DAD2938836.idx  qfiledialog.h.10B1591DD7A5D702.idx  qflags.h.B1B372A48B10BC69.idx  qframe.h.DF65D25A0A331729.idx  qglobal.h.9543F6DCE05AE84F.idx  qhash.h.E9E74764A5842885.idx  qjsondocument.h.002B347140A19E0E.idx  qjsonobject.h.28ECC6CEB99245AF.idx  qjsonvalue.h.2B04D52A22280E37.idx  qmap.h.7B22C3DA799C51F2.idx  qmessagebox.h.192C637E0CD241B1.idx  qmetatype.h.A5B03EB6DCC06AB2.idx  qnativeinterface.h.A019F5C72CCBF18A.idx  qobject.h.FB3033E4677B5374.idx  qset.h.CF9C6ABFBE73DE39.idx  qtextedit.h.459D1489F1977A60.idx  qtmetamacros.h.B9740F9B43DD152F.idx  qtypeinfo.h.1825D28D97FB424D.idx  qurl.h.B0E93781CC7C8130.idx  quuid.h.171709762E5FA2FC.idx  qvariant.h.BB1026FFAD285404.idx  qwidget.h.2698608AA5AA7188.idx  ui_helper.h.25CE497A7053DED1.idx  ui_helper.h.62F701CFF8CDF809.idx
build-helper-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_helper.cpp
common/: mathematicFuncs.h
doc/: graph2d class.puml
helper/: Helper.html  helper.cpp  helper.h  helper.pro  helper.ui  main.cpp
include/: earcut.h
resx/: Examples.json
resx/Helper/: Helper.html
src/: .gitignore  AppointmentProblem.pro  Axis.cpp  Axis.h  AxisTip.cpp  AxisTip.h  CMakeLists.txt  ColoredPolygon.cpp  ColoredPolygon.h  Cube.cpp  Cube.h  Decision.cpp  Decision.h  GeometricProbabilityModel.cpp  GeometricProbabilityModel.h  Graph2d.cpp  Graph2d.h  Graph3d.cpp  Graph3d.h  Helper.html  IDrawable.h  IGeometric.h  IGraph.h  IPolygon.h  IRenderable.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Scene.cpp  Scene.h  SegmentPoint.cpp  SegmentPoint.h  UncoloredPolygon.cpp  UncoloredPolygon.h  helper.cpp  helper.h  helper.pro  helper.ui  mainwindow.cpp  (+4 more)
src/common/: constants.h  geometry.h  json.h  mathematicFuncs.h
src/include/: earcut.h
src/webView/: webView.cpp  webView.h  webView.ui
website/geometric/: package-lock.json  package.json
website/geometric/src/: App.js
